<resources>
    <string name="app_name">chatxd</string>
    <string name="ip">Ip</string>
    <string name="name">Nombre</string>
    <string name="port">Puerto</string>
    <string name="connect">Conectar</string>
    <string name="server">Servidor</string>
    <string name="client">Cliente</string>
    <string name="cancel">Cancelar</string>
    <string name="info">Acerca de</string>
    <string name="version">Versión 1.0</string>
    <string name="createdby">Creado por Jon Andrés, Esteban Escobar</string>
    <string name="connecting">Conectando...</string>
    <string name="connected">Conectado</string>
    <string name="waitingIn">Esperando en: </string>
    <string name="unknownHostException">ERROR: no se encuentra la IP o el nombre de host</string>
    <string name="bindException">ERROR: Dirección de socket en uso</string>
    <string name="welcome">Buenas tardes</string>
    <string name="emptyField">No se pueden dejar campos vacios</string>
    <string name="noInternet">No hay conexión a red</string>
</resources>
